# lightimer

./: .gitignore  CONTRIBUTING.md  LICENSE-MIT  NOTICE  README.md  environment.yml  lightimer.spec  main.py  pyproject.toml
LICENSES/: TclTk.txt
lightimer/: __init__.py  config.py  sound.py  timer.py  ui.py  utils.py
tests/: test_timer.py  test_ui.py
